# D-couverte_Python

./: main.py  pyproject.toml  simple_code.py  test_calcul.py
mon-projet/: main.py  pyproject.toml
